syntax = "proto3";

package book;

message Book {
  int32 id = 1;
  string title = 2;
  string author = 3;
  float price = 4;
}

message Empty {}

message BookList {
  repeated Book books = 1;
}

service BookService {
  rpc GetBooks (Empty) returns (BookList);
  rpc AddBook (Book) returns (Empty);
  rpc DeleteBook (Book) returns (Empty); // Just use id
}
